Create, View ad

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,7 +2,7 @@ logging:
   level:
     root: WARN
     lt.java.exam: DEBUG
-    org.springframework.security: DEBUG
+    org.springframework.security: WARN
 
 spring:
   jackson:
